# game-of-life

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
docs/plans/: 2026-03-07-game-of-life-design.md  2026-03-07-game-of-life-implementation.md
src/: grid.cpp  grid.hpp  main.cpp
